# splatter

./: CMakeLists.txt  README.md
include/: camera.h  shader.h  sim.h
info/: komponentit.md  kuvaus.md  luokat.md
shaders/: basic.vert  render.frag  render.vert  render_colors.frag  render_depth.frag  render_depth_texture.frag  render_normals.frag  spinner.vert  splat.vert  splat_attributes.frag  splat_depth.frag  vertColor.frag
src/: camera.cpp  main.cpp  sim.cpp
